--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-Building_Link="http://cm.beneb.com/wp-json/wp/v2/buildings/?per_page=50"
-Event_Link="http://cm.beneb.com/wp-json/wp/v2/events/?per_page=50"
+REACT_APP_BUILDING="http://cm.beneb.com/wp-json/wp/v2/buildings/?per_page=50"
+REACT_APP_EVENT="http://cm.beneb.com/wp-json/wp/v2/events/?per_page=50"
